# rust-web-scraping

./: Cargo.toml  README.md
src/: main.rs
